# RPGnotes

./: .gitignore  Makefile  deploy.sh  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.js
campaigns/: admin.py  forms.py  models.py  urls.py  urls_public.py  views.py
campaigns/migrations/: 0001_initial.py  0002_campaign_owner.py  0003_alter_campaign_name.py  0004_alter_campaign_name.py  0005_campaign_language.py  0006_alter_campaign_created_alter_campaign_language_and_more.py  0007_campaign_document.py  0008_alter_campaign_language.py
characters/: admin.py  forms.py  models.py  urls.py  views.py
characters/migrations/: 0001_initial.py  0002_auto_20210829_2220.py  0003_auto_20210906_2011.py  0004_auto_20210914_1841.py  0005_auto_20210914_1844.py  0006_auto_20210914_1915.py  0007_auto_20210923_2101.py  0008_auto_20210925_1930.py  0009_auto_20210929_2151.py  0010_auto_20211003_1554.py  0011_auto_20211003_1633.py  0012_alter_character_faction.py  0013_auto_20211125_1358.py  0014_character_character_name_gin_idx.py  0015_alter_historicalcharacter_options_character_aliases_and_more.py  0016_remove_character_nickname_and_more.py  0017_character_linked_objects_and_more.py  0018_remove_character_subtitle_and_more.py
common/: admin.py  apps.py  middlewares.py  tests.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_alter_draft_options.py
common/models/: __init__.py  aliasmodel.py  descriptionmodel.py  draft.py  historymodel.py  nameslugmodel.py
common/templatetags/: bootstrap5.py  formatters.py  language.py  thumbnails.py  thumbutils.py  urls.py  version.py  vite.py
days/: admin.py  forms.py  models.py  urls.py  views.py
days/migrations/: 0001_initial.py  0002_auto_20210923_2101.py  0003_auto_20210925_1930.py  0004_auto_20210925_1932.py  0005_alter_historicalingameday_options_and_more.py  0006_alter_historicalsession_date_alter_session_date.py  0007_historicalingameday_linked_objects_and_more.py  0008_alter_session_options.py  0009_alter_historicalingameday_day_alter_ingameday_day.py
factions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
factions/migrations/: 0001_initial.py  0002_faction_faction_name_gin_idx.py  0003_alter_historicalfaction_options_and_more.py  0004_faction_aliases_historicalfaction_aliases.py  0005_faction_linked_objects_and_more.py
graph/: urls.py  views.py
locations/: admin.py  forms.py  models.py  urls.py  views.py
locations/migrations/: 0001_initial.py  0002_auto_20210915_1359.py  0003_auto_20210915_1442.py  0004_auto_20210923_2101.py  0005_auto_20210925_1930.py  (+6 more)
loot/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
notes/: admin.py  forms.py  models.py  urls.py  views.py
pdf/: urls.py  utils.py  views.py
rpg_notes/: asgi.py  settings.py  urls.py  urls_auth.py  urls_public.py  wsgi.py
search/: urls.py  utils.py  views.py
static/: editor.js  main.js  main.ts  tenantbase.js
static/js/: graph.ts  (+11 more)
templates/: 403.html  403.jinja  500.html  500.jinja  base.html  base.jinja  macros.jinja  navbarbase.html  template.tex  tenantbase.html  tenantbase.jinja
users/: admin.py  forms.py  models.py  urls.py  views.py
utils/: assets.py  colors.py  diff.py  languages.py  markdown.py  mixin.py  money.py  random_filename.py  urls.py  views.py
(+149 files in other folders)
