[tool.poetry]
name = "rpgnotes"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = {extras = ["argon2"], version = "^5.0.0"}
psycopg = {extras = ["c", "pool"], version = "^3.1.19"}
django-simple-history = "^3.0.0"
django-bootstrap5 = "^24.2"
Markdown = "^3.3.4"
bleach = "^6.0.0"
bleach-allowlist = "^1.0.3"
Pillow = "^10.0.0"
sorl-thumbnail = "^12.7.0"
libsass = "^0.23.0"
django-debug-toolbar = "^4.0.0"
django-tenants = "^3.3.2"
django-tenant-users = "^1.2.0"
django-axes = {extras = ["ipware"], version = "^6.1.0"}
django-registration = "^3.2"
django-csp = "^3.7"
django-redis = "^5.0.0"
gunicorn = "^22.0.0"
setproctitle = "^1.2.2"
django-extensions = "^3.1.3"
sentry-sdk = "^2.2.0"
django-tree-queries = "^0.19.0"
django-jinja = "^2.9.1"
bpython = "^0.24"

[tool.poetry.dev-dependencies]
Werkzeug = "^3.0.3"
watchdog = "^4.0.0"
bpython = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
