[tool.poetry]
name = "rpgnotes"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = {extras = ["argon2"], version = "^5.1.0"}
psycopg = {extras = ["c", "pool"], version = "^3.1.19"}
django-simple-history = "^3.0.0"
django-bootstrap5 = "^25.1"
Markdown = "^3.3.4"
bleach = "^6.0.0"
bleach-allowlist = "^1.0.3"
Pillow = "^11.0.0"
sorl-thumbnail = "^12.7.0"
libsass = "^0.23.0"
django-debug-toolbar = "^6.0.0"
django-tenants = "^3.3.2"
django-tenant-users = "^2.0.0"
django-axes = "^8.0.0"
django-registration = "^5.1.0"
django-csp = "^4.0"
django-redis = "^6.0.0"
gunicorn = "^23.0.0"
setproctitle = "^1.2.2"
django-extensions = "^4.1"
sentry-sdk = "^2.2.0"
django-tree-queries = "^0.20.0"
django-jinja = "^2.9.1"

[tool.poetry.dev-dependencies]
Werkzeug = "^3.0.3"
watchdog = "^6.0.0"
bpython = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
